fixed alignment

--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -67,6 +67,10 @@
         padding: 14px 18px;
         border-left: 1px solid $white-2;
       }
+
+      i:last-child {
+        border-right: 1px solid $white-2;
+      }
     }
   }
 
