--- a/sass/modules/_newsletter.scss
+++ b/sass/modules/_newsletter.scss
@@ -18,6 +18,8 @@
 
   &__title {
     grid-column: 5 / 9;
+    align-self: end;
+    margin-bottom: 0;
     font-weight: 800;
   }
 
@@ -28,16 +30,25 @@
   &__input {
     grid-column: 5 / 9;
     height: 68px;
+    padding-left: 8%;
     border: 1px solid $primary;
     color: $white;
-    font-family: $inter;
+    @extend %inter-extrabold;
+    font-size: 1em;
     background-color: transparent;
+  }
+
+  &__input::placeholder {
+    color: $white;
+    @extend %inter-extrabold;
+    font-size: 1em;
   }
 
   &__btn {
     grid-column: 9 / 11;
     height: 68px;
-    font-family: $inter;
+    @extend %inter-extrabold;
+    font-size: 1em;
     color: $white;
     background-color: $primary;
   }
@@ -45,7 +56,7 @@
   &__terms {
     grid-column: 5 / 8;
     display: flex;
-    align-items: center;
+    align-self: start;
     font-weight: 400;
     font-size: 13px;
     color: $white-opacity;
@@ -54,10 +65,15 @@
       height: 20px;
       width: 20px;
       border: 1px solid $primary;
+      background-color: black;
+    }
+
+    input:checked {
+      border: 1px solid $primary;
     }
 
     p {
-      margin-left: 18px;
+      margin: 5px 0 0 18px;
     }
   }
 }
