--- a/sass/modules/_otherNews.scss
+++ b/sass/modules/_otherNews.scss
@@ -26,17 +26,19 @@
     height: 430px;
     grid-column: 9 / 12;
     grid-row: 1 / 3;
-    @extend %grid-3;
+    display: grid;
     grid-template-rows: repeat(4, 1fr);
     margin-bottom: 15vh;
 
     h4 { 
-      grid-column: 1 / 4;
       font-size: 1.2rem;
       margin-top: 0;
       @extend %inter-extrabold;
     }
-    article { grid-column: 1 / 4;}
+    article {
+      display: grid;
+      grid-template-columns: 10% 90%;
+    }
 
     &--id {
       color: $black16-5;
@@ -56,7 +58,10 @@
     &--title {
       line-height: 1.5;
       font-size: 1.25rem;
-      text-align: center;
+      justify-self: left;
+      grid-column: 2 / 3;
+      margin-top: 0;
+      margin-right: 20%;
     }
   }
 
