--- a/sass/modules/_socialMedia.scss
+++ b/sass/modules/_socialMedia.scss
@@ -8,8 +8,11 @@
 
   &__article { 
     height: 350px;
+    width: 455px;
     @extend %inter-reg; 
     background-color: $white;
+    @extend %grid-3;
+    grid-template-rows: repeat(4, 1fr);
   }
   &__article:nth-child(2){ grid-column: 2 / 5;}
   &__article:nth-child(3){ grid-column: 5 / 8;}
@@ -17,7 +20,7 @@
   &__article:nth-child(5){ grid-column: 11 / 13;}
 
   &__links {
-    height: 70px;
+    height: 74px;
     grid-column: 1 / 13;
     @extend %grid-12;
     font-family: $inter;
@@ -31,13 +34,19 @@
       align-self: center;
       justify-self: end;
       img {
-        padding: 23px 24px;
+        padding: 25px 24px;
         border-left: 1px solid $black-opacity;
+      }
+      i:nth-child(2) {
+        img{
+          border-right: 1px solid $black-opacity;
+        }
       }
     }
 
     a {
       width: 134px;
+      height: 74px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -51,12 +60,40 @@
       grid-column: 2 / 3;
       background-color: $black;
       color: $white;
+      margin-top: -1px;
+      border-bottom: 2px solid $black;
     }
   }
 }
 
 .article {
+
+  &__user {
+    @extend %inter-semibold;
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    align-self: center;
+    margin-top: 60px;
+  }
+
+  &__date {
+    margin: 20px 0;
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    align-self: end;
+  }
+
+  &__content {
+    margin: 20px 50px;
+    grid-column: 1 / 4;
+  }
+
   &__img {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    justify-self: end;
+    align-self: end;
+    margin-left: 50px;
     height: 80px;
     width: 80px;
     border-radius: 100%;
